[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4.10"
rocket_cors = { version = "0.5.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres = "0.19.4"
lazy_static = "1.4.0"
features = "0.10.0"
futures = "0.3.24"
rust-ini = "0.18"